# qaqc_jig

./: .gitignore  Makefile  README  TODO  launch_analysis.py  launch_integration.py  pi_pad_calculator.py  x742_rev4.21_1.03.cfa
CAENUSBdrvB-1.5.4/: CAENUSBdrvB.mod.c
CAENUSBdrvB-1.5.5/: CAENUSBdrvB.c
firmware/: client.py  firmware.ino  qaqc-gui
python/: Makefile  RTD_Calibration.json  acquire-waveforms  analyze-waveforms  analyze-waveforms-test  analyze-waveforms.lprof  analyze_waveforms  bimodal_fits_sodium_cesium.py  fit-histograms  generate-LY  generate-RDFs  generate-json  inspect  integrate-waveforms  jig_calibration_4modules_withErrors.csv  makeLightYieldPlots.py  merge_hdf5.py  qaqc-client  qaqc-gui  quick_draw.py  sensor_module.py  server.py  setup.py  tdrstyle.py  wavedump-test
python/btl/: .fit_lyso_funcs.py.swk  .fit_lyso_funcs.py.swl  .fit_lyso_funcs.py.swm  .fit_lyso_funcs.py.swn  __init__.py  client.py  fit_511_funcs.py  fit_gamma_funcs.py  fit_intrinsic_funcs.py  fit_lyso_funcs.py  fit_spe_funcs.py  plot_utils.py
wavedump/: .gitignore  Makefile  WaveDumpConfig_X740.txt  WaveDumpConfig_X742.txt
wavedump-3.10.3/: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  WaveDumpConfig.txt  WaveDumpConfig_X742.txt  configure  configure.ac
wavedump-3.10.3/include/: WDconfig.h  WaveDump.h
wavedump-3.10.3/src/: Makefile.am  Makefile.in  WDconfig.c  WDplot.c  WaveDump.c
wavedump/src/: Makefile  Makefile.dep  Makefile.in  README  SPE_FitScript.sh  WDconfig.c  WDconfig.h  X742CorrectionRoutines.c  analyze-waveforms  analyze_txt  clear_temp_data.py  dark_vs_laser.py  fit-histograms  fit_511_funcs.py  fit_511_spe.py  fit_lyso_funcs.py  fit_spe_funcs.py  flash.c  mkreleasehdr.sh  postgres  release.c  save_charge_data.py  save_spe_data.py  spi.c  test_CAEN_acquire.sh  test_channel_map.py  test_commit.txt  vino_dark_vs_laser.py  wavedump.c  wavedump.h
website/: MANIFEST.in  Makefile  README  btl_qa.sql  gunicorn.service  nginx.conf  requirements.txt  runserver.py  setup.py
website/btl_testing/: .channeldb.py.swp  .resistor.py.swp  .views.py.swp  __init__.py  db.py  moduledb.py  views.py
website/btl_testing/static/: cssProc  fonts
website/btl_testing/static/css/: minard.css
website/btl_testing/static/js/: burst.js  burst_form.js  cavity_temp.js  check_rates.js  cratelevelgraphs.js  cubism.v1.js  detector_state.js  discriminator.js  l2.js  l3.js  remote-network-monitor.js  scatter_plot_disc.js  scatter_plot_gains.js  snostream.js
website/btl_testing/templates/: 500.html  _formhelpers.html  channel_database.html  channel_status.html  layout.html  module_database.html  module_status.html  run_database.html  run_status.html  update_channel_status.html  upload_new_module.html
website/init/: baseline_monitor  gunicorn  gunicorn_snoplus_log  minard-base  minard-cmos  minard-dispatch
